--- a/style.css
+++ b/style.css
@@ -22,6 +22,7 @@ body {
 
 .home-data {
   margin-left: 156px;
+  margin-right: 102px;
 }
 .home-data a {
   text-decoration: none;
@@ -50,6 +51,53 @@ body {
   width: 100%;
   padding: 10px;
 } */
+
+/* grid-section */
+
+.players-card {
+  width: 1050px;
+
+  margin: 70px auto;
+}
+
+.players-card img {
+  width: 100%;
+}
+.grid-container {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-gap: 30px;
+}
+
+.grid-item {
+  box-shadow: 0px 0px 40px rgba(0, 0, 0, 0.15);
+  width: 300px;
+  height: 444px;
+  padding: 15px;
+}
+
+.grid-item h1 {
+  font-size: 28px;
+  line-height: 40px;
+  font-weight: 700;
+  text-align: left;
+  color: #18191f;
+  font-style: normal;
+}
+
+.grid-item img {
+  width: 300px;
+  height: 256px;
+}
+
+.grid-item p {
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 26px;
+  letter-spacing: 0em;
+  text-align: left;
+}
 
 @media only screen and (max-width: 688px) {
   .home {
@@ -83,5 +131,20 @@ body {
   }
   .home-img img {
     width: 100%;
+  }
+
+  /* grid responsive */
+  .players-card {
+    display: flex;
+    /* justify-content: center;
+    align-items: center; */
+    width: 100%;
+    margin-left: 15px;
+    margin-right: 15px;
+  }
+
+  .grid-container {
+    display: flex;
+    flex-direction: column;
   }
 }
