--- a/style.css
+++ b/style.css
@@ -136,11 +136,11 @@ body {
   /* grid responsive */
   .players-card {
     display: flex;
-    /* justify-content: center;
-    align-items: center; */
+    justify-content: center;
+    align-items: center;
     width: 100%;
-    margin-left: 15px;
-    margin-right: 15px;
+    /* margin-left: 15px;
+    margin-right: 15px; */
   }
 
   .grid-container {
