--- a/style.css
+++ b/style.css
@@ -131,6 +131,7 @@ i {
 .footer p {
   width: 236px;
   height: 32px;
+  text-align: center;
 }
 
 @media only screen and (max-width: 688px) {
@@ -183,18 +184,57 @@ i {
   }
 
   .footer {
-    height: 213px;
-    width: 484px;
-    margin: 0 auto;
-    /* display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center; */
-    margin-bottom: 63px;
+    margin-bottom: 187px;
   }
 
   .footer img {
     width: 150px;
     height: 63px;
+  }
+}
+
+@media only screen and (min-width: 688px) and (max-width: 992px) {
+  .home {
+    width: 100%;
+    height: 500px;
+  }
+
+  .home-title {
+    font-size: 36px;
+    line-height: 50px;
+    width: 278px;
+    height: 138px;
+
+    margin-bottom: 30px;
+    margin-top: 112px;
+  }
+
+  .home-data {
+    margin-left: 50px;
+    margin-right: 50px;
+  }
+
+  .home-img {
+    width: 400px;
+    height: 259px;
+    margin-right: 16px;
+    margin-left: 16px;
+    margin-bottom: 62px;
+    margin-top: 50px;
+  }
+  .home-img img {
+    width: 100%;
+  }
+
+  .players-card {
+    width: 100%;
+    margin: 70px auto;
+  }
+
+  .grid-container {
+    display: grid;
+    grid-template-columns: repeat(2, 330px);
+    justify-content: center;
+    align-items: center;
   }
 }
