--- a/style.css
+++ b/style.css
@@ -7,6 +7,49 @@ body {
   padding: 0;
 }
 
+/* button animation */
+
+.button {
+  border-radius: 4px;
+  background-color: #e02c6d;
+  border: none;
+  color: #ffffff;
+  text-align: center;
+  font-size: 20px;
+  padding: 15px;
+  width: 168px;
+  transition: all 0.5s;
+  cursor: pointer;
+  /* margin: 5px; */
+}
+
+.button span {
+  cursor: pointer;
+  display: inline-block;
+  position: relative;
+  transition: 0.5s;
+}
+
+.button span:after {
+  content: "\00bb";
+  position: absolute;
+  opacity: 0;
+  top: 0;
+  right: -20px;
+  transition: 0.5s;
+}
+
+.button:hover span {
+  padding-right: 15px;
+}
+
+.button:hover span:after {
+  opacity: 1;
+  right: 0;
+}
+
+/* end button animation */
+
 .home {
   display: flex;
   justify-content: center;
@@ -24,13 +67,17 @@ body {
   margin-left: 156px;
   margin-right: 102px;
 }
+
+/* .home-data i {
+  margin-left: 10px;
+}
 .home-data a {
   text-decoration: none;
   background-color: #e02c6d;
   padding: 10px 20px;
   text-align: center;
   color: #ffffff;
-}
+} */
 .home-title {
   color: #ffffff;
   font-weight: 700;
@@ -119,7 +166,7 @@ body {
   align-items: center;
 }
 
-i {
+.social-icon i {
   margin-right: 14px;
 }
 
